--- a/capitulos/miro-costas.qmd
+++ b/capitulos/miro-costas.qmd
@@ -14,6 +14,8 @@ comments:
 #| label: inicio
 #| echo: false
 
+# tinytex::reinstall_tinytex(repository = "illinois")
+
 library(officer)
 library(stringr)
 library(dplyr, warn.conflicts = FALSE)
