--- a/capitulos/miro-costas.qmd
+++ b/capitulos/miro-costas.qmd
@@ -159,32 +159,21 @@ La lista de variables identificadas es:
 #| label: lista_vars
 #| echo: false
 
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, pattern = "http", 
-                                              replacement = "\nhttp")
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = "(?<=[a-z])([A-Z])", 
-                                              replacement = " \\1")
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = "Suelos sueltos", 
-                                              replacement = "\nSuelos sueltos")
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = "VALERIA", 
-                                              replacement = "\n- VALERIA\n")
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = "Eventos de vientos extremos.", 
-                                              replacement = "\nSuelos sueltos")
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = "segundos\\)En versión", 
-                                              replacement = "segundos)\nEn versión")
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = '&#34;', 
-                                              replacement = '\\" ')
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = "&#43;\\)", 
-                                              replacement = " \\+ ")
-datos_miro$nodes$text <- stringr::str_replace(datos_miro$nodes$text, 
-                                              pattern = "arrastre\\?WB", 
-                                              replacement = "arrastre\\?\nWB")
+datos_miro$nodes <- 
+  datos_miro$nodes %>%
+  select(text, var, color) %>% 
+  mutate(text = stringr::str_replace_all(text, pattern = '&#34;', replacement = '\\"'),
+         text = stringr::str_replace_all(text, pattern = "&#43;", replacement = " \\+ "),
+         text = stringr::str_replace_all(text, pattern = "http", replacement = "\nhttp"),
+         text = stringr::str_replace_all(text, pattern = "(?<=[a-z])([A-Z])", replacement = " \\1"),
+         text = stringr::str_replace_all(text, pattern = "Suelos sueltos", 
+                                         replacement = "\nSuelos sueltos"),
+         text = stringr::str_replace_all(text, pattern = "VALERIA ", replacement = "\n- VALERIA\n"),
+         text = stringr::str_replace_all(text, pattern = "Eventos de vientos extremos.",
+                                         replacement = "\nSuelos sueltos"),
+         text = stringr::str_replace_all(text, pattern = "segundos\\)En versión",
+                                         replacement = "segundos)\nEn versión"),
+         text = stringr::str_replace_all(text, pattern = "arrastre\\?WB", replacement = "arrastre\\?\nWB"))
 
 
 datos_miro$nodes %>%   
